# Subhoofer

./: .gitignore  Ardura_Sub.sln  Ardura_Sub.vcxproj  Ardura_Sub.vcxproj.filters  Cargo.toml  LICENSE  OnePole.h  README.md  bundler.toml  smbPitchShift.cpp  subhoofer.cpp  subhoofer.h  subhoofer_proc.cpp
.github/workflows/: rust.yml
src/: CustomWidgets.rs  SweetenX.rs  db_meter.rs  duro_process.rs  editor.rs  lib.rs  ui_knob.rs
src/CustomWidgets/: db_meter.rs  ui_knob.rs
