[package]
name = "Subhoofer"
version = "2.2.1"
edition = "2021"
authors = ["Ardura <azviscarra@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/ardura"
description = "Harmonic and Subharmonic Bass Enhancement"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
atomic_float = "0.1"
lazy_static = "1.4.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "bb274976ca138289436b0bfa209b2c8c13244225", features = ["assert_process_allocs"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "bb274976ca138289436b0bfa209b2c8c13244225"}
once_cell = "1.18.0"
rand = "0.8.5"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
#opt-level = 3
#debug = false
#lto = "fat"
#strip = "symbols"

[profile.profiling]
inherits = "release"
lto = "off"
opt-level = 0
debug = true
strip = "none"
